--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://www.frontendmentor.io/profile/mohamedsellami">Mohamed Sellami</a>.
     </div>
   </body>
 </html>
